<resources>
    <string name="app_name">merge</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="easy">便當</string>
    <string name="sidedish">配菜</string>
    <string name="title">title</string>
    <string name="foodnames">食物名稱</string>
    <string name="steps">步驟</string>
    <string name="need_food">/ 材料 /</string>
    <string name="sauce">/ 調味料 /</string>
    <string name="company">©橙嗜食驗©</string>
    <string name="detailimage">detailimage</string>
    <string name="dsteps">詳細步驟</string>
</resources>