<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/logo2"
        android:id="@+id/select_food_container"
        >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D6795B"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                        android:id="@+id/TV_detailsname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="40sp"
                        android:textStyle="bold|italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.542"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="食物名稱" />
    </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/NestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/need"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="56dp"
                android:text="@string/need_food"
                android:textColor="#4F1616"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/IV_detailsimage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sauce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="50dp"
                android:text="@string/sauce"
                android:textColor="#4F1616"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/IV_detailsimage"
                app:layout_constraintTop_toBottomOf="@+id/TV_food_need" />

            <TextView
                android:id="@+id/TV_sauce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="#36431B"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toEndOf="@+id/sauce"
                app:layout_constraintTop_toTopOf="@+id/sauce"
                tools:text="調味料" />

            <TextView
                android:id="@+id/TV_food_need"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:textColor="#36431B"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toEndOf="@+id/need"
                app:layout_constraintTop_toTopOf="@+id/need"
                tools:text="食材" />

            <ImageView
                android:id="@+id/IV_detailsimage"
                android:layout_width="353dp"
                android:layout_height="335dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/detailimage"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/sidedish10" />
            <!--android:onClick="clicklink"-->
            <Button
                android:id="@+id/BTN_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"

                android:background="@drawable/buttonstyle"
                android:text="@string/dsteps"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"

                app:backgroundTint="#DC8E76"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/IV_detailsimage" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/company"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TV_sauce"
                app:layout_constraintVertical_bias="0.921" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>
